<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/backgroundColor"
            android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
            app:title="@string/app_name" />
<!--        content here-->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/backgroundColor"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="@drawable/rounded_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Card Item -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/invisiblecolor"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="369dp"
                        android:layout_height="67dp"
                        android:orientation="vertical">

                        <!-- Tiêu đề -->
                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:padding="5px"
                            android:text="@string/sensitive"
                            android:textColor="@color/textcolor"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <!-- Icon + SeekBar -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_alarm" />

                            <SeekBar
                                android:id="@+id/seekBar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:progressTint="#0026FF"
                                android:thumbTint="#414EB3" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_dark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!--                    title -->

                    <TextView
                        android:id="@+id/texsettimeinit"
                        android:layout_width="131dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:padding="5px"
                        android:text="@string/time_set"
                        android:textColor="@color/textcolor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="62dp">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="205dp"
                            android:layout_height="48dp"
                            android:hint="@string/enter_your_time_set"
                            app:boxCornerRadiusBottomEnd="8dp"
                            app:boxCornerRadiusBottomStart="8dp"
                            app:boxCornerRadiusTopEnd="8dp"
                            app:boxCornerRadiusTopStart="8dp"
                            app:boxStrokeColor="@color/white"
                            app:boxStrokeWidth="2dp"
                            app:endIconMode="clear_text">

                            <EditText
                                android:id="@+id/inputField"
                                android:layout_width="196dp"
                                android:layout_height="48dp"
                                android:ems="10"
                                android:inputType="number" />


                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button3"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:backgroundTint="@color/card_bg"
                            android:text="@string/verify_button"
                            android:textAllCaps="false"
                            android:textColor="@color/textcolor"
                            android:textSize="16sp"
                            app:iconTint="@color/card_bg" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_bg"
                android:elevation="4dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp">

                <!-- Item 1 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingVertical="1dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button2"
                        app:cardElevation="0dp"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:backgroundTint="@color/card_bg"
                        android:text="@string/choose_file_alarm"
                        android:textAllCaps="false"
                        android:textColor="@color/textcolor"
                        android:textSize="16sp"
                        app:iconTint="@color/card_bg" />
                </LinearLayout>

                <!-- Divider -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_dark" />

                <!-- Item 2 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingVertical="14dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/file_name"
                    android:textSize="16sp"
                    android:textColor="@color/textcolor" />

<!--                    <Switch-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content" />-->
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_bg"
                android:elevation="4dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp">

                <!-- Item 1 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingVertical="1dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/yourthemes"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="11"
                        android:backgroundTint="@color/card_bg"
                        android:gravity="start|center_vertical"
                        android:text="@string/your_themes"
                        android:textAllCaps="false"
                        android:textColor="@color/textcolor"
                        android:textSize="16sp"
                        app:iconTint="@color/card_bg" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_themes" />
                </LinearLayout>

                <!-- Divider -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_dark" />

                <!-- Item 2 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingVertical="1dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/yourlanguage"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="11"
                        android:backgroundTint="@color/card_bg"
                        android:gravity="start|center_vertical"
                        android:text="@string/language_english"
                        android:textAllCaps="false"
                        android:textColor="@color/textcolor"
                        android:textSize="16sp"
                        app:iconTint="@color/card_bg" />
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_book" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_bg"
                android:elevation="4dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp">

                <!-- Item 1 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingVertical="1dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="11"
                        android:backgroundTint="@color/card_bg"
                        android:text="@string/How_to_use"
                        android:textAllCaps="false"
                        android:textColor="@color/textcolor"
                        android:textSize="16sp"
                        app:iconTint="@color/white" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_arrow_right" />

                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/drawer_header" />

</androidx.drawerlayout.widget.DrawerLayout>